--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="palette-icon.png" />
   </head>
   <body>
     <div class="container">
-      <h1>Color Palette Generator</h1>
+      <h1>🎨 Color Palette Generator</h1>
 
       <button id="generate-btn">
         <i class="fas fa-sync-alt"></i>
@@ -23,7 +24,7 @@
       </button>
 
       <div class="palette-container">
-        <!-- COLOR BOX 1 -->
+        <!-- COLOR BOXES (unchanged, same functionality) -->
         <div class="color-box">
           <div class="color" style="background-color: #e1f5fe"></div>
           <div class="color-info">
@@ -31,7 +32,6 @@
             <i class="far fa-copy copy-btn" title="Copy to clipboard"></i>
           </div>
         </div>
-        <!-- COLOR BOX 2 -->
         <div class="color-box">
           <div class="color" style="background-color: #b3e5fc"></div>
           <div class="color-info">
@@ -39,7 +39,6 @@
             <i class="far fa-copy copy-btn" title="Copy to clipboard"></i>
           </div>
         </div>
-        <!-- COLOR BOX 3 -->
         <div class="color-box">
           <div class="color" style="background-color: #81d4fa"></div>
           <div class="color-info">
@@ -47,7 +46,6 @@
             <i class="far fa-copy copy-btn" title="Copy to clipboard"></i>
           </div>
         </div>
-        <!-- COLOR BOX 4 -->
         <div class="color-box">
           <div class="color" style="background-color: #4fc3f7"></div>
           <div class="color-info">
@@ -55,7 +53,6 @@
             <i class="far fa-copy copy-btn" title="Copy to clipboard"></i>
           </div>
         </div>
-        <!-- COLOR BOX 5 -->
         <div class="color-box">
           <div class="color" style="background-color: #29b6f6"></div>
           <div class="color-info">
